<resources>
    <string name="app_name">HireMe</string>
    <string name="title_search">Поиск</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_responses">Отклики</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_profile">Профиль</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>